agregue un section

--- a/clase 3.html
+++ b/clase 3.html
@@ -25,5 +25,10 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <h2>bienvenidos a git</h2>
+        </section>
+    </main>
 </body>
 </html>
