agregue una imagen y parafo

--- a/clase 3.html
+++ b/clase 3.html
@@ -28,6 +28,8 @@
     <main>
         <section>
             <h2>bienvenidos a git</h2>
+            <p>estoy haciendo un cambio</p>
+            <img src="https://via.placeholder.com/200">
         </section>
     </main>
 </body>
