agregue seccion de productos pa

--- a/clase 3.html
+++ b/clase 3.html
@@ -31,6 +31,9 @@
             <p>estoy haciendo un cambio</p>
             <img src="https://via.placeholder.com/200">
         </section>
+        <section>
+            <!--aca faltan los productos-->
+        </section>
     </main>
 </body>
 </html>
